plugin/testData/diagnostics/simple.kt
import me.mrfang.transparent.Transparent

@Transparent
<!VALUE_CLASS_WITHOUT_JVM_INLINE_ANNOTATION!>value<!> class Name(private val s: String)
